--- a/take_700.css
+++ b/take_700.css
@@ -1,7 +1,7 @@
 body {
     padding: 20%;
     text-align: center; 
-    background: url(../atm/fabian-blank-pElSkGRA2NU-unsplash.jpg) center; 
+    background: url(../atm/piggyBank.jpg) center; 
     width: 100%;
     height: 100vh; 
     background-size: cover;
